# ecl_manipulation

./: README.md  stack.xml
ecl/: package.xml
ecl_manipulation/: package.xml
ecl_manipulators/: CMakeLists.txt  Makefile  manifest.xml  package.xml
ecl_manipulators/include/ecl/: CMakeLists.txt
ecl_manipulators/include/ecl/manipulators/: CMakeLists.txt
ecl_manipulators/pkg-config/: CMakeLists.txt  ecl_manipulators.pc.in
ecl_manipulators/src/lib/: CMakeLists.txt  trajectory.cpp
ecl_manipulators/src/test/: CMakeLists.txt
