<package>
  <name>ecl_manipulation</name>
  <version>0.50.0</version>
  <description>
    Includes basic manipulation related structures as well as a few 
    algorithms currently used at Yujin Robot.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/ecl_manipulation</url>
  <url type="repository">https://github.com/stonier/ecl_manipulation</url>
  <url type="bugtracker">https://github.com/stonier/ecl_manipulation/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <build_depend>ecl_tools</build_depend>
  <build_depend>ecl_lite</build_depend>
  <build_depend>ecl_core</build_depend>
  <build_depend>ecl_manipulators</build_depend>

  <run_depend>ecl_tools</run_depend>
  <run_depend>ecl_lite</run_depend>
  <run_depend>ecl_core</run_depend>
  <run_depend>ecl_manipulators</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
